--- a/index.html
+++ b/index.html
@@ -174,6 +174,47 @@
             speech.pitch = 1;
             window.speechSynthesis.speak(speech);
         }
+
+        function sendMessage() {
+    let userInput = document.getElementById("user-input");
+    let message = userInput.value.trim();
+
+    if (message === "") return; // Prevent empty messages
+
+    let chatbox = document.getElementById("chatbox");
+
+    // Display user's message
+    let userMessageElement = document.createElement("div");
+    userMessageElement.style.textAlign = "right";
+    userMessageElement.innerHTML = `<strong>You:</strong> ${message}`;
+    chatbox.appendChild(userMessageElement);
+
+    // Clear input field
+    userInput.value = "";
+
+    // Simulate Mary's response (Replace this with actual logic)
+    setTimeout(() => {
+        let responseMessage = `Mary: You asked about '${message}'. I can assist you with ${selectedVehicle}.`;
+
+        let responseElement = document.createElement("div");
+        responseElement.style.textAlign = "left";
+        responseElement.innerHTML = responseMessage;
+        chatbox.appendChild(responseElement);
+
+        speakText(responseMessage); // Speak response
+
+        // Scroll chatbox to the bottom
+        chatbox.scrollTop = chatbox.scrollHeight;
+    }, 1000);
+}
+
+// Send message when "Enter" key is pressed
+function handleKeyPress(event) {
+    if (event.key === "Enter") {
+        sendMessage();
+    }
+}
+
     </script>
 </body>
 </html>
