--- a/index.html
+++ b/index.html
@@ -5,92 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Human Motors Welkom</title>
     <style>
-        body { 
-            font-family: Arial, sans-serif; 
-            text-align: center; 
-            margin: 0; 
-            padding: 0; 
-            background: url("assets/ford-logo.png") no-repeat center center fixed;
-            background-size: cover;
-        }
-
-        /* Button Container */
-        #button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding: 20px;
-        }
-
-        .arrow-button {
-            font-size: 24px;
-            background: none;
-            border: none;
-            cursor: pointer;
-            margin: 10px;
-        }
-
-        .car-button {
-            width: 180px;
-            height: 100px;
-            border: none;
-            background-size: cover;
-            background-position: center;
-            cursor: pointer;
-            border-radius: 10px;
-            transition: transform 0.2s;
-        }
-
-        .car-button:hover {
-            transform: scale(1.1);
-        }
-
-        /* Chatbox */
-        #chatbox {
-            width: 90%;
-            max-width: 400px;
-            height: 300px;
-            margin: 0 auto;
-            background: white;
-            border-radius: 10px;
-            overflow-y: auto;
-            padding: 10px;
-            border: 1px solid #ccc;
-            text-align: left;
-        }
-
-        /* Input Field */
-        #input-container {
-            width: 90%;
-            max-width: 400px;
-            margin: 10px auto;
-            display: flex;
-            background: white;
-            border-radius: 25px;
-            padding: 10px;
-            border: 1px solid #ccc;
-            align-items: center;
-        }
-
-        #user-input {
-            flex: 1;
-            border: none;
-            padding: 10px;
-            outline: none;
-            font-size: 16px;
-        }
-
-        .mic-button {
-            background: none;
-            border: none;
-            cursor: pointer;
-            font-size: 24px;
-            margin-left: 10px;
-        }
-
-        .mic-button.recording {
-            color: red;
-        }
+        /* Your existing styles */
     </style>
 </head>
 <body>
@@ -123,7 +38,6 @@
         let currentIndex = 0;
         let carButton = document.getElementById("car-button");
         let selectedVehicle = images[0].name; // Default to first vehicle
-        let isVoiceMessage = false;
 
         function prevImage() {
             currentIndex = (currentIndex - 1 + images.length) % images.length;
@@ -151,8 +65,7 @@
             recognition.onresult = function(event) {
                 let transcript = event.results[0][0].transcript;
                 document.getElementById("user-input").value = transcript;
-                isVoiceMessage = true;
-                sendMessage();
+                sendMessage();  // Call sendMessage only after voice input is finished
             };
 
             recognition.onerror = function() {
@@ -176,46 +89,44 @@
         }
 
         function sendMessage() {
-    let userInput = document.getElementById("user-input");
-    let message = userInput.value.trim();
+            let userInput = document.getElementById("user-input");
+            let message = userInput.value.trim();
 
-    if (message === "") return; // Prevent empty messages
+            if (message === "") return; // Prevent empty messages
 
-    let chatbox = document.getElementById("chatbox");
+            let chatbox = document.getElementById("chatbox");
 
-    // Display user's message
-    let userMessageElement = document.createElement("div");
-    userMessageElement.style.textAlign = "right";
-    userMessageElement.innerHTML = `<strong>You:</strong> ${message}`;
-    chatbox.appendChild(userMessageElement);
+            // Display user's message
+            let userMessageElement = document.createElement("div");
+            userMessageElement.style.textAlign = "right";
+            userMessageElement.innerHTML = `<strong>You:</strong> ${message}`;
+            chatbox.appendChild(userMessageElement);
 
-    // Clear input field
-    userInput.value = "";
+            // Clear input field
+            userInput.value = "";
 
-    // Simulate Mary's response (Replace this with actual logic)
-    setTimeout(() => {
-        let responseMessage = `Mary: You asked about '${message}'. I can assist you with ${selectedVehicle}.`;
+            // Simulate Mary's response (Replace this with actual logic)
+            setTimeout(() => {
+                let responseMessage = `Mary: You asked about '${message}'. I can assist you with ${selectedVehicle}.`;
 
-        let responseElement = document.createElement("div");
-        responseElement.style.textAlign = "left";
-        responseElement.innerHTML = responseMessage;
-        chatbox.appendChild(responseElement);
+                let responseElement = document.createElement("div");
+                responseElement.style.textAlign = "left";
+                responseElement.innerHTML = responseMessage;
+                chatbox.appendChild(responseElement);
 
-        speakText(responseMessage); // Speak response
+                speakText(responseMessage); // Speak response
 
-        // Scroll chatbox to the bottom
-        chatbox.scrollTop = chatbox.scrollHeight;
-    }, 1000);
-}
+                // Scroll chatbox to the bottom
+                chatbox.scrollTop = chatbox.scrollHeight;
+            }, 1000);
+        }
 
-// Send message when "Enter" key is pressed
-function handleKeyPress(event) {
-    if (event.key === "Enter") {
-        sendMessage();
-    }
-}
-
-
+        // Send message when "Enter" key is pressed
+        function handleKeyPress(event) {
+            if (event.key === "Enter") {
+                sendMessage();
+            }
+        }
     </script>
 </body>
 </html>
