--- a/index.html
+++ b/index.html
@@ -2,10 +2,83 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale: 1.0">
     <title>Human Motors Welkom</title>
     <style>
-        /* Your existing styles */
+        body { 
+            font-family: Arial, sans-serif; 
+            text-align: center; 
+            margin: 0; 
+            padding: 0; 
+            background: url("assets/ford-logo.png") no-repeat center center fixed;
+            background-size: cover;
+        }
+
+        /* Button Container */
+        #button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+
+        .arrow-button {
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+        }
+
+        .car-button {
+            width: 180px;
+            height: 100px;
+            border: none;
+            background-size: cover;
+            background-position: center;
+            cursor: pointer;
+            border-radius: 10px;
+            transition: transform 0.2s;
+        }
+
+        .car-button:hover {
+            transform: scale(1.1);
+        }
+
+        /* Chatbox */
+        #chatbox {
+            width: 90%;
+            max-width: 400px;
+            height: 300px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 10px;
+            overflow-y: auto;
+            padding: 10px;
+            border: 1px solid #ccc;
+            text-align: left;
+        }
+
+        /* Input Field */
+        #input-container {
+            width: 90%;
+            max-width: 400px;
+            margin: 10px auto;
+            display: flex;
+            background: white;
+            border-radius: 25px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            align-items: center;
+        }
+
+        #user-input {
+            flex: 1;
+            border: none;
+            padding: 10px;
+            outline: none;
+            font-size: 16px;
+        }
     </style>
 </head>
 <body>
@@ -23,7 +96,6 @@
     <!-- Input Field -->
     <div id="input-container">
         <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
-        <button class="mic-button" id="mic-button" onclick="startVoiceRecording()">🎤</button>
     </div>
 
     <script>
@@ -42,91 +114,64 @@
         function prevImage() {
             currentIndex = (currentIndex - 1 + images.length) % images.length;
             carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
-            selectedVehicle = images[currentIndex].name;
+            selectedVehicle = images[currentIndex].name; // Update selected vehicle
         }
 
         function nextImage() {
             currentIndex = (currentIndex + 1) % images.length;
             carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
-            selectedVehicle = images[currentIndex].name;
+            selectedVehicle = images[currentIndex].name; // Update selected vehicle
         }
 
-        function startVoiceRecording() {
-            let micButton = document.getElementById("mic-button");
-            let recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-            recognition.lang = "en-US";
-            recognition.interimResults = false;
-            recognition.maxAlternatives = 1;
+        // Assign vehicle when clicking on the image
+        carButton.addEventListener("click", function() {
+            console.log("Selected vehicle:", selectedVehicle);
+        });
 
-            recognition.onstart = function() {
-                micButton.classList.add("recording");
-            };
+        // Preventing double calling of sendMessage
+        let isSending = false;
 
-            recognition.onresult = function(event) {
-                let transcript = event.results[0][0].transcript;
-                document.getElementById("user-input").value = transcript;
-                sendMessage();  // Call sendMessage only after voice input is finished
-            };
+        async function sendMessage() {
+            if (isSending) return;  // Prevent multiple triggers
+            isSending = true; // Locking the function while sending message
 
-            recognition.onerror = function() {
-                alert("Could not understand audio. Please try again.");
-            };
-
-            recognition.onend = function() {
-                micButton.classList.remove("recording");
-            };
-
-            recognition.start();
-        }
-
-        function speakText(text) {
-            let speech = new SpeechSynthesisUtterance();
-            speech.text = text;
-            speech.lang = "en-US";
-            speech.rate = 1;
-            speech.pitch = 1;
-            window.speechSynthesis.speak(speech);
-        }
-
-        function sendMessage() {
-            let userInput = document.getElementById("user-input");
-            let message = userInput.value.trim();
-
-            if (message === "") return; // Prevent empty messages
-
+            let inputField = document.getElementById("user-input");
             let chatbox = document.getElementById("chatbox");
+            let userMessage = inputField.value.trim();
+            if (userMessage === "") {
+                isSending = false; // Unlock after check
+                return;
+            }
 
-            // Display user's message
-            let userMessageElement = document.createElement("div");
-            userMessageElement.style.textAlign = "right";
-            userMessageElement.innerHTML = `<strong>You:</strong> ${message}`;
-            chatbox.appendChild(userMessageElement);
+            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+            chatbox.scrollTop = chatbox.scrollHeight;
 
-            // Clear input field
-            userInput.value = "";
-
-            // Simulate Mary's response (Replace this with actual logic)
-            setTimeout(() => {
-                let responseMessage = `Mary: You asked about '${message}'. I can assist you with ${selectedVehicle}.`;
-
-                let responseElement = document.createElement("div");
-                responseElement.style.textAlign = "left";
-                responseElement.innerHTML = responseMessage;
-                chatbox.appendChild(responseElement);
-
-                speakText(responseMessage); // Speak response
-
-                // Scroll chatbox to the bottom
+            try {
+                let response = await fetch("https://foton-server.onrender.com/message", {
+                    method: "POST",
+                    headers: { "Content-Type": "application/json" },
+                    body: JSON.stringify({ 
+                        message: userMessage, 
+                        vehicle: selectedVehicle // Send selected vehicle name
+                    })
+                });
+                let data = await response.json();
+                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
                 chatbox.scrollTop = chatbox.scrollHeight;
-            }, 1000);
+            } catch (error) {
+                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
+            }
+
+            inputField.value = "";
+            isSending = false; // Unlock after sending message
         }
 
-        // Send message when "Enter" key is pressed
         function handleKeyPress(event) {
             if (event.key === "Enter") {
                 sendMessage();
             }
         }
     </script>
+
 </body>
 </html>
