--- a/index.html
+++ b/index.html
@@ -14,153 +14,83 @@
             background-size: cover;
         }
 
-        /* Button Container */
-        #button-container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        /* Contact Form */
+        #contact-form {
+            width: 300px;
+            margin: 50px auto;
             padding: 20px;
-        }
-
-        .arrow-button {
-            font-size: 24px;
-            background: none;
-            border: none;
-            cursor: pointer;
-            margin: 10px;
-        }
-
-        .car-button {
-            width: 180px;
-            height: 100px;
-            border: none;
-            background-size: cover;
-            background-position: center;
-            cursor: pointer;
-            border-radius: 10px;
-            transition: transform 0.2s;
-        }
-
-        .car-button:hover {
-            transform: scale(1.1);
-        }
-
-        /* Chatbox */
-        #chatbox {
-            width: 90%;
-            max-width: 400px;
-            height: 300px;
-            margin: 0 auto;
             background: white;
             border-radius: 10px;
-            overflow-y: auto;
-            padding: 10px;
-            border: 1px solid #ccc;
-            text-align: left;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
 
-        /* Input Field */
-        #input-container {
-            width: 90%;
-            max-width: 400px;
-            margin: 10px auto;
-            display: flex;
-            background: white;
-            border-radius: 25px;
+        input, button {
+            width: 100%;
             padding: 10px;
+            margin: 10px 0;
             border: 1px solid #ccc;
-            align-items: center;
-        }
-
-        #user-input {
-            flex: 1;
-            border: none;
-            padding: 10px;
-            outline: none;
+            border-radius: 5px;
             font-size: 16px;
+        }
+
+        button {
+            background-color: #007BFF;
+            color: white;
+            cursor: pointer;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        #response-message {
+            margin-top: 10px;
+            font-size: 14px;
+            color: green;
         }
     </style>
 </head>
 <body>
 
-    <!-- Buttons with Arrows -->
-    <div id="button-container">
-        <button class="arrow-button" onclick="prevImage()">⬅️</button>
-        <button id="car-button" class="car-button" style="background-image: url('assets/1.png');"></button>
-        <button class="arrow-button" onclick="nextImage()">➡️</button>
-    </div>
+    <h2>Contact Us</h2>
+    
+    <form id="contact-form">
+        <input type="text" id="name" placeholder="Your Name" required>
+        <input type="email" id="email" placeholder="Your Email" required>
+        <button type="submit">Send</button>
+    </form>
 
-    <!-- Chatbox -->
-    <div id="chatbox"></div>
-
-    <!-- Input Field -->
-    <div id="input-container">
-        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
-    </div>
+    <p id="response-message"></p>
 
     <script>
-        let images = [
-            { src: 'assets/1.png', name: "Foton Minibus" },
-            { src: 'assets/2.png', name: "Truckmate" },
-            { src: 'assets/3.png', name: "Panel Van" },
-            { src: 'assets/4.png', name: "Tunland G7 Single cab" },
-            { src: 'assets/5.png', name: "Tunland G7 Double cab" }
-        ];
-
-        let currentIndex = 0;
-        let carButton = document.getElementById("car-button");
-        let selectedVehicle = images[0].name; // Default to first vehicle
-
-        function prevImage() {
-            currentIndex = (currentIndex - 1 + images.length) % images.length;
-            carButton.style.backgroundImage = "url('" + images[currentIndex].src + "')";
-            selectedVehicle = images[currentIndex].name; // Update selected vehicle
-        }
-
-        function nextImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            carButton.style.backgroundImage = "url('" + images[currentIndex].src + "')";
-            selectedVehicle = images[currentIndex].name; // Update selected vehicle
-        }
-
-        // Assign vehicle when clicking on the image
-        carButton.addEventListener("click", function() {
-            console.log("Selected vehicle:", selectedVehicle);
-        });
-
-        async function sendMessage() {
-            let inputField = document.getElementById("user-input");
-            let chatbox = document.getElementById("chatbox");
-            let userMessage = inputField.value.trim();
-            if (userMessage === "") return;
-
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
-            chatbox.scrollTop = chatbox.scrollHeight;
+        document.getElementById("contact-form").addEventListener("submit", async function(event) {
+            event.preventDefault();
+            
+            const name = document.getElementById("name").value;
+            const email = document.getElementById("email").value;
+            const responseMessage = document.getElementById("response-message");
 
             try {
-                let response = await fetch("https://foton-server.onrender.com/message", {
+                const response = await fetch("http://localhost:5000/contact", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ 
-                        message: userMessage, 
-                        vehicle: selectedVehicle // Send selected vehicle name
-                    })
+                    body: JSON.stringify({ name, email })
                 });
-                let data = await response.json();
-                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
-                chatbox.scrollTop = chatbox.scrollHeight;
+
+                const data = await response.json();
+                responseMessage.textContent = data.message;
+
+                if (response.ok) {
+                    responseMessage.style.color = "green";
+                    document.getElementById("contact-form").reset();
+                } else {
+                    responseMessage.style.color = "red";
+                }
             } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
+                responseMessage.textContent = "Error: Could not send email.";
+                responseMessage.style.color = "red";
             }
-
-            inputField.value = "";
-        }
-
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
-        }
+        });
     </script>
 
 </body>
