--- a/index.html
+++ b/index.html
@@ -14,84 +14,168 @@
             background-size: cover;
         }
 
-        /* Contact Form */
-        #contact-form {
-            width: 300px;
-            margin: 50px auto;
+        #button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             padding: 20px;
-            background: white;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
 
-        input, button {
-            width: 100%;
+        .arrow-button {
+            font-size: 24px;
+            background: none;
+            border: none;
+            cursor: pointer;
+            margin: 10px;
+        }
+
+        .car-button {
+            width: 180px;
+            height: 100px;
+            border: none;
+            background-size: cover;
+            background-position: center;
+            cursor: pointer;
+            border-radius: 10px;
+            transition: transform 0.2s;
+        }
+
+        .car-button:hover {
+            transform: scale(1.1);
+        }
+
+        #chatbox {
+            width: 90%;
+            max-width: 400px;
+            height: 300px;
+            margin: 0 auto;
+            background: white;
+            border-radius: 10px;
+            overflow-y: auto;
             padding: 10px;
-            margin: 10px 0;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            text-align: left;
+        }
+
+        #input-container {
+            width: 90%;
+            max-width: 400px;
+            margin: 10px auto;
+            display: flex;
+            background: white;
+            border-radius: 25px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            align-items: center;
+        }
+
+        #user-input {
+            flex: 1;
+            border: none;
+            padding: 10px;
+            outline: none;
             font-size: 16px;
         }
 
-        button {
-            background-color: #007BFF;
+        /* Form Styling */
+        #user-form {
+            margin: 20px auto;
+            width: 90%;
+            max-width: 400px;
+            background: white;
+            padding: 15px;
+            border-radius: 10px;
+            border: 1px solid #ccc;
+            text-align: left;
+        }
+
+        #user-form input, #user-form button {
+            width: calc(100% - 20px);
+            margin: 10px;
+            padding: 10px;
+            font-size: 16px;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+        }
+
+        #user-form button {
+            background: blue;
             color: white;
             cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #0056b3;
-        }
-
-        #response-message {
-            margin-top: 10px;
-            font-size: 14px;
-            color: green;
         }
     </style>
 </head>
 <body>
 
-    <h2>Contact Us</h2>
-    
-    <form id="contact-form">
-        <input type="text" id="name" placeholder="Your Name" required>
-        <input type="email" id="email" placeholder="Your Email" required>
-        <button type="submit">Send</button>
+    <div id="button-container">
+        <button class="arrow-button" onclick="prevImage()">⬅️</button>
+        <button id="car-button" class="car-button" style="background-image: url('assets/1.png');"></button>
+        <button class="arrow-button" onclick="nextImage()">➡️</button>
+    </div>
+
+    <div id="chatbox"></div>
+
+    <div id="input-container">
+        <input type="text" id="user-input" placeholder="Type a message..." onkeypress="handleKeyPress(event)">
+    </div>
+
+    <form id="user-form">
+        <input type="text" id="user-name" placeholder="Enter your name" required>
+        <input type="email" id="user-email" placeholder="Enter your email" required>
+        <button type="button" onclick="sendEmail()">Send Email</button>
     </form>
 
-    <p id="response-message"></p>
-
     <script>
-        document.getElementById("contact-form").addEventListener("submit", async function(event) {
-            event.preventDefault();
-            
-            const name = document.getElementById("name").value;
-            const email = document.getElementById("email").value;
-            const responseMessage = document.getElementById("response-message");
+        let images = [
+            { src: 'assets/1.png', name: "Foton Minibus" },
+            { src: 'assets/2.png', name: "Truckmate" },
+            { src: 'assets/3.png', name: "Panel Van" },
+            { src: 'assets/4.png', name: "Tunland G7 Single cab" },
+            { src: 'assets/5.png', name: "Tunland G7 Double cab" }
+        ];
+
+        let currentIndex = 0;
+        let carButton = document.getElementById("car-button");
+        let selectedVehicle = images[0].name;
+
+        function prevImage() {
+            currentIndex = (currentIndex - 1 + images.length) % images.length;
+            carButton.style.backgroundImage = "url('" + images[currentIndex].src + "')";
+            selectedVehicle = images[currentIndex].name;
+        }
+
+        function nextImage() {
+            currentIndex = (currentIndex + 1) % images.length;
+            carButton.style.backgroundImage = "url('" + images[currentIndex].src + "')";
+            selectedVehicle = images[currentIndex].name;
+        }
+
+        async function sendEmail() {
+            let name = document.getElementById("user-name").value;
+            let email = document.getElementById("user-email").value;
+            if (!name || !email) {
+                alert("Please enter both name and email.");
+                return;
+            }
+
+            let emailData = {
+                name: name,
+                email: email,
+                vehicle: selectedVehicle
+            };
 
             try {
-                const response = await fetch("http://localhost:5000/contact", {
+                let response = await fetch("https://your-email-server.com/send", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ name, email })
+                    body: JSON.stringify(emailData)
                 });
-
-                const data = await response.json();
-                responseMessage.textContent = data.message;
-
-                if (response.ok) {
-                    responseMessage.style.color = "green";
-                    document.getElementById("contact-form").reset();
-                } else {
-                    responseMessage.style.color = "red";
-                }
+                let data = await response.json();
+                alert("Email sent successfully!");
             } catch (error) {
-                responseMessage.textContent = "Error: Could not send email.";
-                responseMessage.style.color = "red";
+                alert("Error sending email. Please try again.");
             }
-        });
+        }
     </script>
-
 </body>
 </html>
