--- a/index.html
+++ b/index.html
@@ -99,69 +99,71 @@
     </div>
 
     <script>
-        let images = [
-            { src: 'assets/1.png', name: "Foton Minibus" },
-            { src: 'assets/2.png', name: "Vehicle 2" },
-            { src: 'assets/3.png', name: "Vehicle 3" },
-            { src: 'assets/4.png', name: "Vehicle 4" },
-            { src: 'assets/5.png', name: "Vehicle 5" }
-        ];
+    let images = [
+        { src: 'assets/1.png', name: "Foton Minibus" },
+        { src: 'assets/2.png', name: "Vehicle 2" },
+        { src: 'assets/3.png', name: "Vehicle 3" },
+        { src: 'assets/4.png', name: "Vehicle 4" },
+        { src: 'assets/5.png', name: "Vehicle 5" }
+    ];
 
-        let currentIndex = 0;
-        let carButton = document.getElementById("car-button");
-        let selectedVehicle = images[0].name; // Default to first vehicle
+    let currentIndex = 0;
+    let carButton = document.getElementById("car-button");
+    let selectedVehicle = images[0].name; // Default to first vehicle
 
-        function prevImage() {
-            currentIndex = (currentIndex - 1 + images.length) % images.length;
-            carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
-            selectedVehicle = images[currentIndex].name; // Update selected vehicle
-        }
+    function prevImage() {
+        currentIndex = (currentIndex - 1 + images.length) % images.length;
+        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+        selectedVehicle = images[currentIndex].name;
+    }
 
-        function nextImage() {
-            currentIndex = (currentIndex + 1) % images.length;
-            carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
-            selectedVehicle = images[currentIndex].name; // Update selected vehicle
-        }
+    function nextImage() {
+        currentIndex = (currentIndex + 1) % images.length;
+        carButton.style.backgroundImage = `url('${images[currentIndex].src}')`;
+        selectedVehicle = images[currentIndex].name;
+    }
 
-        // Assign vehicle when clicking on the image
-        carButton.addEventListener("click", function() {
-            console.log("Selected vehicle:", selectedVehicle);
-        });
+    // Click to confirm vehicle selection
+    carButton.addEventListener("click", function() {
+        let chatbox = document.getElementById("chatbox");
+        chatbox.innerHTML += `<p><strong>Mary:</strong> You selected ${selectedVehicle}. Feel free to ask me anything about it!</p>`;
+    });
 
-        async function sendMessage() {
-            let inputField = document.getElementById("user-input");
-            let chatbox = document.getElementById("chatbox");
-            let userMessage = inputField.value.trim();
-            if (userMessage === "") return;
+    async function sendMessage() {
+        let inputField = document.getElementById("user-input");
+        let chatbox = document.getElementById("chatbox");
+        let userMessage = inputField.value.trim();
+        if (userMessage === "") return;
 
-            chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+        chatbox.innerHTML += `<p><strong>You:</strong> ${userMessage}</p>`;
+        chatbox.scrollTop = chatbox.scrollHeight;
+
+        try {
+            let response = await fetch("https://foton-server.onrender.com/message", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ 
+                    message: userMessage, 
+                    vehicle: selectedVehicle // Send selected vehicle name
+                })
+            });
+            let data = await response.json();
+            chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
             chatbox.scrollTop = chatbox.scrollHeight;
-
-            try {
-                let response = await fetch("https://foton-server.onrender.com/message", {
-                    method: "POST",
-                    headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ 
-                        message: userMessage, 
-                        vehicle: selectedVehicle // Send selected vehicle name
-                    })
-                });
-                let data = await response.json();
-                chatbox.innerHTML += `<p><strong>Mary:</strong> ${data.reply.join('<br>')}</p>`;
-                chatbox.scrollTop = chatbox.scrollHeight;
-            } catch (error) {
-                chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
-            }
-
-            inputField.value = "";
+        } catch (error) {
+            chatbox.innerHTML += `<p style="color:red;"><strong>Mary:</strong> Error contacting server.</p>`;
         }
 
-        function handleKeyPress(event) {
-            if (event.key === "Enter") {
-                sendMessage();
-            }
+        inputField.value = "";
+    }
+
+    function handleKeyPress(event) {
+        if (event.key === "Enter") {
+            sendMessage();
         }
-    </script>
+    }
+</script>
+
 
 </body>
 </html>
