--- a/index.html
+++ b/index.html
@@ -99,13 +99,14 @@
     </div>
 
     <script>
-    let images = [
+     let images = [
         { src: 'assets/1.png', name: "Foton Minibus" },
-        { src: 'assets/2.png', name: "Vehicle 2" },
-        { src: 'assets/3.png', name: "Vehicle 3" },
-        { src: 'assets/4.png', name: "Vehicle 4" },
-        { src: 'assets/5.png', name: "Vehicle 5" }
+        { src: 'assets/2.png', name: "eTruckmate" },
+        { src: 'assets/3.png', name: "eView Panel Van" },
+        { src: 'assets/4.png', name: "Tunland G7 Single Cab" },
+        { src: 'assets/5.png', name: "tunland G& Double Cab" }
     ];
+
 
     let currentIndex = 0;
     let carButton = document.getElementById("car-button");
