Fix: selected vehicle

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     conversation: conversationHistory
                 })
             });
-            alert("Conversation sent to sybrandswanepoel74@gmail.com");
+            alert("Conversation sent to sybrandswanepoel@gmail.com");
         }
 
         window.onbeforeunload = sendConversationToEmail; // Send email before closing tab
